--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -135,6 +135,24 @@
       <!-- end Skills -->
       {% endif %}
 
+      {% if site.resume_section_abilities %}
+      <!-- begin Abilities -->
+      <section class="content-section">
+
+        <header class="section-header">
+          <h2>Abilities</h2>
+        </header>
+        {% for ability in site.data.abilities %}
+        <div class="resume-item">
+          <h4 class="resume-item-details">{{ ability.skill }}</h4>
+          <p class="resume-item-copy">{{ ability.description }}</p>
+        </div>
+        {% endfor %}
+
+      </section>
+      <!-- end Abilities -->
+      {% endif %}
+
       {% if site.resume_section_recognition %}
       <!-- begin Recognition -->
       <section class="content-section">
