--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -231,6 +231,15 @@
       }
     }
   }
+  .resume-item-title,
+  .resume-item-details,
+  .resume-item-copy,
+  .resume-item-list {
+    a {
+      color:inherit;
+      text-decoration: none;
+    }
+  }
   a {
     color:inherit;
     text-decoration: none;
