--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -226,8 +226,10 @@
       }
     }
   }
-  a {
-    color:inherit;
-    text-decoration: none;
+  .content-section {
+    a {
+      color:inherit;
+      text-decoration: none;
+    }
   }
 }
