Add more specificity to disable links in print

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -230,5 +230,15 @@
       color:inherit;
       text-decoration: none;
     }
+
+    .resume-item-title,
+    .resume-item-details,
+    .resume-item-copy,
+    .resume-item-list {
+      a {
+        color:inherit;
+        text-decoration: none;
+      }
+    }
   }
 }
