Add missing Ability heading

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -116,7 +116,7 @@
         </header>
         {% for ability in site.data.abilities %}
         <div class="resume-item">
-          <h4 class="resume-item-details">{{ ability.skill }}</h4>
+          <h4 class="resume-item-details">{{ ability.ability }}</h4>
           <p class="resume-item-copy">{{ ability.description }}</p>
         </div>
         {% endfor %}
