Add Vimeo to print-social-links.html

--- a/_includes/print-social-links.html
+++ b/_includes/print-social-links.html
@@ -32,6 +32,11 @@
   <li><strong>Instagram</strong>: {{ site.resume_social_links.resume_instagram_url }}</li>
   {% endif %}
 
+  <!-- Vimeo link -->
+  {% if site.resume_social_links.resume_vimeo_url %}
+  <li><strong>Vimeo</strong>: {{ site.resume_social_links.resume_vimeo_url }}</li>
+  {% endif %}
+
   <!-- Website link -->
   {% if site.resume_social_links.resume_website_url %}
   <li><strong>Website</strong>: {{ site.resume_social_links.resume_website_url }}</li>
