--- a/_includes/icon-links.html
+++ b/_includes/icon-links.html
@@ -39,6 +39,11 @@
   <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_instagram_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-instagram.html %}</a></li>
   {% endif %}
 
+  <!-- Vimeo link -->
+  {% if site.resume_social_links.resume_vimeo_url %}
+  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_vimeo_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-vimeo.html %}</a></li>
+  {% endif %}
+
   <!-- Website link -->
   {% if site.resume_social_links.resume_website_url %}
   <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_website_url }}" class="icon-link" itemprop="url">{% include icons/icon-website.html %}</a></li>
